[package]
name = "seguridad_keylogger_api"
version = "0.1.0"
authors = ["Raigiku <raigiku@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
sqlx = { version = "0.4", features = [ "runtime-actix-rustls", "postgres", "chrono", "uuid" ] }
